[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Map_Parts/MP-03-RollOver_Hor.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 33, 712 )

[node name="MP-03-SideScroll_Over" type="Node2D"]
script = ExtResource( 1 )

[node name="EL_ER" type="Area2D" parent="."]
position = Vector2( -85, 530 )
collision_layer = 262144
collision_mask = 724610

[node name="CollisionShape2D" type="CollisionShape2D" parent="EL_ER"]
position = Vector2( 2, 10 )
shape = SubResource( 1 )

[node name="ER_EL" type="Area2D" parent="."]
position = Vector2( 2007, 530 )
collision_layer = 262144
collision_mask = 724610

[node name="CollisionShape2D" type="CollisionShape2D" parent="ER_EL"]
position = Vector2( 2, 10 )
shape = SubResource( 1 )

[connection signal="area_shape_entered" from="EL_ER" to="." method="_on_EL_ER_area_shape_entered"]
[connection signal="body_entered" from="EL_ER" to="." method="_on_EL_ER_body_entered"]
[connection signal="area_shape_entered" from="ER_EL" to="." method="_on_ER_EL_area_shape_entered"]
[connection signal="body_entered" from="ER_EL" to="." method="_on_ER_EL_body_entered"]
